src/test/ui/error-codes/E0767.rs
fn main () {
    'a: loop {
        || {
            loop { break 'a; } //~ ERROR E0767
        }
    }
}
